--- a/project2/index.html
+++ b/project2/index.html
@@ -17,6 +17,7 @@
     <script src="js/d3.v3.min.js"></script>
     <script src="js/d3.geo.projection.js"></script>
     <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/echarts.min.js"></script>
     <script src="js/highcharts.js"></script>
     <script src="https://img.hcharts.cn/highcharts/modules/data.js"></script>
     <script src="js/map.js"></script>
@@ -28,7 +29,7 @@
     #container {
       height: 500px; 
       min-width: 310px; 
-      max-width: 600px; 
+      max-width: 800px; 
       margin: 0 auto; 
     }
     .loading {
