--- a/project2/index.html
+++ b/project2/index.html
@@ -16,20 +16,24 @@
     <link href="https://img.hcharts.cn/libs/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
     <script src="js/d3.v3.min.js"></script>
     <script src="js/d3.geo.projection.js"></script>
-    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/echarts.min.js"></script>
+    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
+    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
+    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/dataTool.min.js"></script>
+    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/bmap.min.js"></script>
     <script src="js/highcharts.js"></script>
     <script src="https://img.hcharts.cn/highcharts/modules/data.js"></script>
     <script src="js/map.js"></script>
     <script src="js/exporting.js"></script> 
-    <script src="js/main.js"></script>
+    
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
     #container {
-      height: 500px; 
+      height: 700px; 
       min-width: 310px; 
-      max-width: 800px; 
+      max-width: 1200px; 
       margin: 0 auto; 
     }
     .loading {
@@ -72,14 +76,14 @@
       </div>
     </div>
 
-    <script src="https://img.hcharts.cn/mapdata/countries/us/us-all.js"></script>
-    <script src="https://img.hcharts.cn/libs/jquery-ui/jquery-ui.min.js"></script>
     <div id="container">
         <div class="loading">
             <i class="icon-spinner icon-spin icon-large"></i>
             Loading data from Google Spreadsheets...
         </div>
     </div>
+    
+    <script src="js/main.js"></script>
   </body>
 
 </html>
