--- a/project2/index.html
+++ b/project2/index.html
@@ -12,20 +12,16 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="https://img.hcharts.cn/libs/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
-    <link href="https://img.hcharts.cn/libs/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
     <script src="js/d3.v3.min.js"></script>
-    <script src="js/d3.geo.projection.js"></script>
+    <script src="js/d3.geo.projection.js"></script> 
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <script src="js/echarts.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/dataTool.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/bmap.min.js"></script>
-    <script src="js/highcharts.js"></script>
-    <script src="https://img.hcharts.cn/highcharts/modules/data.js"></script>
-    <script src="js/map.js"></script>
-    <script src="js/exporting.js"></script> 
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -82,8 +78,9 @@
             Loading data from Google Spreadsheets...
         </div>
     </div>
-    
+    <div id="dialog" style="width: 320px;height:305px;"></div>
     <script src="js/main.js"></script>
+
   </body>
 
 </html>
