--- a/project2/index.html
+++ b/project2/index.html
@@ -12,7 +12,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/echarts.min.js"></script>
     
 
