--- a/project2/index.html
+++ b/project2/index.html
@@ -51,6 +51,8 @@
       height: 600px;
       width: 630px;
       margin: 0 auto;
+      position: relative;
+      top:50px;
     }
 
     .loading {
@@ -113,6 +115,7 @@
 
     <div id="container">
       <div id="Radios">
+        <h1>US Trade</h1>
         <span >
         Years: </t>
           <input id="year" name="year" type="radio" value="2013" checked="checked" >2013</input>
