--- a/project2/geo-lines(1).html
+++ b/project2/geo-lines(1).html
@@ -208,7 +208,7 @@ var convertData = function (data) {
     }
     return res;
 };
-
+console.log(convertData(BJData));
 var color = ['#a6c84c', '#ffa022', '#46bee9'];
 var series = [];
 [['北京', BJData], ['上海', SHData], ['广州', GZData]].forEach(function (item, i) {
