--- a/project2/index.html
+++ b/project2/index.html
@@ -20,7 +20,8 @@
     <style>
     #container {
       height: 700px; 
-      max-width: 1400px; 
+      min-width:1400px; 
+      max-width: 2400px; 
       margin: 0 auto; 
     }
 
@@ -112,8 +113,8 @@
       </div>
     </div>
 
-    <div id="container">
-      <div id="Radios">
+    <div id="container" >
+      <div id="Radios" >
         <h1>US Trade</h1>
         <span >
         Years: </t>
@@ -128,13 +129,13 @@
           <input id="trade" name="trade" type="radio" value="Import" >Import</input>
         </span>
       </div>
-      <div id="left">
+      <div id="left" >
         <div id="leftTop" ></div>
         <div id="leftButtom" ></div>
       </div>
-      <div id="right">
+      <div id="right" >
           <div id="rightTop" ></div>       
-          <div id="rightButtom" ></div>
+          <div id="rightButtom"></div>
       </div>
       <div id="mapUp" class="map">
       <div class="loading">
@@ -150,7 +151,6 @@
       </div>
     </div>
     </div>
-    
     <script src="js/State.js"></script>
     
 
