--- a/project2/index.html
+++ b/project2/index.html
@@ -13,6 +13,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/font-awesome.css" rel="stylesheet">
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/watch.js"></script>
     <script src="js/echarts.min.js"></script>
     
 
