--- a/project2/index.html
+++ b/project2/index.html
@@ -132,7 +132,7 @@
       width:50%;
       height: 0px;
       margin-top: 8px;
-      margin-left:14px;
+      margin-left:0.9%;
       margin-right:auto;
       
     }
