--- a/project2/index.html
+++ b/project2/index.html
@@ -218,14 +218,14 @@
       <div id="mapUp" class="map">
       <div class="loading">
           <i class="icon-spinner icon-spin icon-large"></i>
-            Loading data from Google Spreadsheets...
+            Loading data ...
       </div>
     </div>
     <br/>
     <div id="mapDown" class="map" style="margin-top:-5px">
       <div class="loading">
           <i class="icon-spinner icon-spin icon-large"></i>
-            Loading data from Google Spreadsheets...
+            Loading data ...
       </div>
     </div>
     </div>
