--- a/project2/index.html
+++ b/project2/index.html
@@ -119,12 +119,9 @@
     }
 
     #Radios {
-      width:45%;
+      width:43%;
       height: 0px;
-      margin-top: -10px;
-      padding: 0px;
-      margin-left:435px;
-      margin-right:auto;
+      margin:0 auto;
       
     }
     
@@ -178,7 +175,7 @@
   <div class="tab-pane fade active in" id="home">
 
 <div id="container" >
-      <div id="Radios" >
+      <div id="Radios" style="margin-top:-10px">
         <h1></h1>
         <span>
         Years: </t>
