--- a/project2/index.html
+++ b/project2/index.html
@@ -119,10 +119,11 @@
     }
 
     #Radios {
-      width:43%;
+      width:45%;
+      margin-top: -10px;
+      margin-left:435px;
+      margin-right:auto;
       height: 0px;
-      margin:0 auto;
-      
     }
     
     #RadiosB {
@@ -175,7 +176,7 @@
   <div class="tab-pane fade active in" id="home">
 
 <div id="container" >
-      <div id="Radios" style="margin-top:-10px">
+      <div id="Radios">
         <h1></h1>
         <span>
         Years: </t>
